<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources
    [
        <!ENTITY author "abhishekwl">
        <!ENTITY base_url "https://shielded-waters-36569.herokuapp.com/api/v1/">
    ]>

<resources>
    <string name="app_name">Hunt (Admin)</string>
    <string name="app_name_actual">Hunt</string>
    <string name="sign_in">Sign In.</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="new_here_sign_up">New here? Sign Up</string>
    <string name="base_server_url">&base_url;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_settings">Store Settings</string>
    <string name="delivery_settings">Delivery Settings</string>
    <string name="delivery_service_offered">Do you offer delivery service?</string>
    <string name="delivery_distance_threshold">How far are you willing to deliver for free?</string>
    <string name="extra_distance_unit_cost">What\'s the rate per kilometre if the customer is out of your free delivery service range?</string>
    <string name="free_delivery_cost_threshold">What should the total of the customer\'s bill be above in order for you to offer delivery service?</string>
    <string name="analytics">Analytics</string>
    <string name="order_history">Order History</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="discount_on_item">Discount on item (%)</string>
    <string name="item_original_price">Item Original Price (\u20b9)</string>
    <string name="ad">Ad</string>

    <array name="departments">
        <item>Electronics</item>
        <item>Groceries</item>
        <item>Stationery</item>
        <item>Eatery</item>
        <item>Furniture</item>
        <item>Health Care</item>
        <item>Sports</item>
        <item>Kitchen</item>
        <item>Tools &amp; Hardware</item>
        <item>Clothing</item>
        <item>Accessories</item>
        <item>Books</item>
        <item>Vehicle</item>
    </array>
</resources>
